--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
-Hi Team,
-
-Welcome To DBA Lounge.
+<html>
+  <title>DBA Lounge</title>
+  <body bg="cyan" text="red">
+    <center><H1>Hi Team Welcome to DBA lounge</H1></center>
+  </body>  
+<html> 
