--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <title>DBA Lounge</title>
-  <body bg="cyan" text="red">
-    <center><H1>Hi Team Welcome to DBA lounge</H1></center>
+  <body bgcolor="cyan" text="red">
+    <center><H1>Hi Team ..!!</H1></center>
+    <marquee><H1>This is our DevOps First Poject</H1></marquee>
   </body>  
 <html> 
