--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <title>DBA Lounge</title>
   <body bgcolor="cyan" text="red">
-    <center><H1>Hello World</H1></center>
+    <center><H1>Hi Guys</H1></center>
     <marquee><H1>This is Test Project of DevOps</H1></marquee>
   </body>  
 <html> 
