--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <title>DBA Lounge</title>
-  <body bgcolor="cyan" text="red">
+  <body bgcolor="yellow" text="red">
     <center><H1>Hi Guys</H1></center>
     <marquee><H1>This is Test Project of DevOps</H1></marquee>
   </body>  
