--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <title>DBA Lounge</title>
-  <body bgcolor="yellow" text="red">
-    <center><H1>Hi</H1></center>
-    <marquee><H1>This is Test Project of DevOps</H1></marquee>
+  <body bgcolor="green" text="red">
+    <center><H1>DBA</H1></center>
+    <marquee><H1>Helo Guys</H1></marquee>
   </body>  
 <html> 
